manifests/v1beta1/components/webhook/webhooks.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: katib.kubeflow.org
webhooks:
  - name: validator.experiment.katib.kubeflow.org
    sideEffects: None
    admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: Cg==
      service:
        name: katib-controller
        namespace: katib
        path: /validate-experiment
    rules:
      - apiGroups:
          - kubeflow.org
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - experiments
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: katib.kubeflow.org
webhooks:
  - name: defaulter.experiment.katib.kubeflow.org
    sideEffects: None
    admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: Cg==
      service:
        name: katib-controller
        namespace: katib
        path: /mutate-experiment
    rules:
      - apiGroups:
          - kubeflow.org
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - experiments
  - name: mutator.pod.katib.kubeflow.org
    sideEffects: None
    admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: Cg==
      service:
        name: katib-controller
        namespace: katib
        path: /mutate-pod
    namespaceSelector:
      matchLabels:
        katib.kubeflow.org/metrics-collector-injection: enabled
    # Once the AdmissionWebhookMatchConditions feature gate is enabled by default, we should switch to control based on userInfo.
    # REF:
    # - AdmissionWebhookMatchConditions: https://kubernetes.io/docs/reference/access-authn-authz/extensible-admission-controllers/#matching-requests-matchconditions
    # - Tracking issue: https://github.com/kubeflow/katib/issues/2206
    objectSelector:
      matchExpressions:
        - key: katib.kubeflow.org/metrics-collector-injection
          operator: NotIn
          values:
            - disabled
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
